# backend/src/api/controllers/auth.js
@@ -70,6 +70,7 @@ exports.signupGenerateOtp = async (req, res, next) => {
 *     summary: Verify OTP when user is signed up
 *     tags:
 *       - User Authentication
+*       - User Authentication With Pin
 *     description: Verify OTP when user is signed up
 *     produces:
 *       - application/json
@@ -316,8 +317,9 @@ exports.loginVerifyOtp = async (req, res, next) => {
             return res.status(410).send({ status: false, message: "OTP has expired." });
         }
 
-        const user = await updateUser({ _id: existingUser._id }, { otpVerification: true });
+        let user = await updateUser({ _id: existingUser._id }, { otpVerification: true });
         const token = await commonFunction.generateJWT({ email: email, id: user._id });
+        user.pin = undefined;
         return res.status(200).send({ status: true, message: "User Login successfully.", user, token });
     } catch (error) {
         return res.status(500).send({ status: false, message: error.message });
@@ -368,6 +370,155 @@ exports.loginEmailPin = async (req, res, next) => {
         const token = await commonFunction.generateJWT({ email: email, id: existingUser._id });
         existingUser.pin = undefined;
         return res.status(200).send({ status: true, message: "User Login successfully.", user: existingUser, token });
+    } catch (error) {
+        return res.status(500).send({ status: false, message: error.message });
+    }
+}
+
+/**
+* @swagger
+* /auth/send-otp-for-set-pin:
+*   post:
+*     summary: send-otp-for-set-pin
+*     tags:
+*       - User Authentication With Pin
+*     description: send-otp-for-set-pin
+*     produces:
+*       - application/json
+*     requestBody:
+*       required: true
+*       content:
+*         application/json:
+*           schema:
+*             $ref: '#/definitions/user_generate_otp_def'
+*     responses:
+*       '200':
+*         description: OK
+*       '400':
+*         description: Bad Request
+*       '409':
+*         description: Conflict
+*       '410':
+*         description: Gone
+*/
+exports.sendOtpForSetPin = async (req, res, next) => {
+    try {
+        const { email } = req.body;
+
+        const existingUser = await findUser({ email: email });
+        const pinChangedOtp = await commonFunction.generateOTP();
+        const pinChangedOtpExpireTime = new Date().getTime() + 180000;
+
+        if (!existingUser) {
+            return res.status(404).send({ status: false, message: "User not found." });
+        }
+
+        await commonFunction.sendPinChangedGenerateOTPMail(email, pinChangedOtp);
+        await updateUser({ _id: existingUser._id }, { pinChangedOtp, pinChangedOtpExpireTime, pinChangedOtpVerification: false });
+        return res.status(200).send({ status: true, message: "OTP sent successfully.", email: email });
+    } catch (error) {
+        return res.status(500).send({ status: false, message: error.message });
+    }
+}
+
+/**
+* @swagger
+* /auth/verify-otp-for-pin-change:
+*   post:
+*     summary: verify-otp-for-pin-change
+*     tags:
+*       - User Authentication With Pin
+*     description: verify-otp-for-pin-change
+*     produces:
+*       - application/json
+*     requestBody:
+*       required: true
+*       content:
+*         application/json:
+*           schema:
+*             $ref: '#/definitions/user_verify_otp_def'
+*     responses:
+*       '200':
+*         description: OK
+*       '400':
+*         description: Bad Request
+*       '409':
+*         description: Conflict
+*       '410':
+*         description: Gone
+*/
+exports.verifyOtpForPinChange = async (req, res, next) => {
+    try {
+        const { email, otp } = req.body;
+
+        const existingUser = await findUser({ email: email });
+        if (!existingUser) {
+            return res.status(400).send({ status: false, message: "Email not registerd." });
+        }
+
+        if (existingUser.pinChangedOtp != otp) {
+            return res.status(400).send({ status: false, message: "OTP not matched." });
+        }
+
+        // Check if the OTP has expired
+        if (new Date().getTime() > existingUser.pinChangedOtpExpireTime) {
+            return res.status(410).send({ status: false, message: "OTP has expired." });
+        }
+
+        let user = await updateUser({ _id: existingUser._id }, { pinChangedOtpVerification: true });
+        const token = await commonFunction.generateJWT({ email: email, id: user._id });
+        user.pin = undefined;
+        return res.status(200).send({ status: true, message: "User Login successfully.", user, token });
+    } catch (error) {
+        return res.status(500).send({ status: false, message: error.message });
+    }
+}
+
+
+
+/**
+* @swagger
+* /auth/reset-pin-password:
+*   post:
+*     summary: reset-pin-password
+*     tags:
+*       - User Authentication With Pin
+*     description: reset-pin-password
+*     produces:
+*       - application/json
+*     parameters:
+*       - in: header
+*         name: token
+*         description: JWT token obtained after user authentication
+*         required: true
+*         type: string
+*     requestBody:
+*       required: true
+*       content:
+*         application/json:
+*           schema:
+*             $ref: '#/definitions/change_pin_def'
+*     responses:
+*       '200':
+*         description: OK
+*       '400':
+*         description: Bad Request
+*       '409':
+*         description: Conflict
+*       '410':
+*         description: Gone
+*/
+exports.resetPinPassword = async (req, res, next) => {
+    try {
+        const { new_pin, confirm_pin } = req.body;
+
+        if (new_pin != confirm_pin) {
+            return res.status(400).send({ status: false, message: "Confirm pin not matched." });
+        }
+
+        const pin = await bcrypt.hash(new_pin, 10);
+        await updateUser({ _id: req.user._id }, { pin });
+        return res.status(200).send({ status: true, message: "Pin Changed Successfully." });
     } catch (error) {
         return res.status(500).send({ status: false, message: error.message });
     }
